# premortem

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  PATTERNS.md  README.md  SPEC_003_COMPLETION.md  STILLWATER_0.13_EVALUATION.md  STILLWATER_CONFIG.md
.github/: SECURITY.md
.github/workflows/: ci.yml  coverage.yml  security.yml
benches/: env_validation.rs
docs/: PATTERNS.md  TESTING.md
examples/: README.md
examples/basic/: Cargo.toml  config.toml  main.rs
examples/env-validation/: main.rs
examples/error-demo/: main.rs
examples/layered/: Cargo.toml
examples/layered-config/: main.rs
examples/layered/config/: base.toml  development.toml  production.toml
examples/layered/src/: main.rs
examples/predicates/: main.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
examples/tracing/: Cargo.toml  config.toml  main.rs
examples/tracing/src/: main.rs
examples/validation/: Cargo.toml  main.rs
examples/watch/: config.toml  main.rs
examples/web-server/: Cargo.toml  config.toml  main.rs
examples/web-server/src/: main.rs
examples/yaml/: config.yaml  main.rs
premortem-derive/: Cargo.toml  README.md
premortem-derive/src/: codegen.rs  lib.rs  parse.rs  validate.rs  validators.rs
specs/: 001-core-config-builder.md  001-source-location-tracking.md  001-yaml-support.md  002-error-types.md  002-remote-sources.md  002-source-location-propagation.md  003-env-validation-ergonomics.md  003-stillwater-0.13-predicate-integration.md  003-validate-trait.md  004-derive-macro.md  005-toml-source.md  006-env-source.md  007-defaults-source.md  008-pretty-errors.md  009-value-tracing.md  010-hot-reload.md  011-prelude-stillwater-integration.md  012-config-env-trait.md  012-json-source.md  013-integration-examples.md  014-property-tests.md
src/: config.rs  env.rs  error.rs  lib.rs  prelude.rs  pretty.rs  source.rs  trace.rs  validate.rs  value.rs  watch.rs
src/sources/: defaults.rs  env_source.rs  json_source.rs  mod.rs  toml_source.rs  yaml_source.rs
tests/: derive_tests.rs  env_required_integration.rs  property_tests.rs
