[package]
name = "premortem"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
license = "MIT"
description = "A configuration library that performs a premortem on your app's config—finding all the ways it would die before it ever runs"
repository = "https://github.com/iepathos/premortem"
keywords = ["configuration", "validation", "config", "settings", "premortem"]
categories = ["config", "rust-patterns"]
readme = "README.md"

[workspace]
members = ["premortem-derive"]

[dependencies]
stillwater = { path = "/Users/glen/memento-mori/stillwater" }
premortem-derive = { path = "premortem-derive", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
toml = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
premortem-derive = { path = "premortem-derive" }

[features]
default = ["toml", "derive"]
derive = ["premortem-derive"]
toml = ["dep:toml"]
json = []
yaml = []
watch = []
remote = []
full = ["toml", "json", "yaml", "watch", "remote", "derive"]
