[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
premortem = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
stillwater = { path = "/Users/glen/memento-mori/stillwater" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
